--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "body-scroll-lock": "^3.1.5",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
